# Tauri-Wallpaper-Changer

./: README.md
src/: index.html  main.js  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
