[package]
name = "wallpaper-changer"
version = "1.0.0"
description = "A simple wallpaper changer app let's you add images to a list and random one is set as the desktop wallpaper primarily for use with multiple monitors."
authors = ["Zain Gill"]
edition = "2021"

[lib]
name = "wallpaper_changer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
winapi = { version = "0.3", features = ["shellapi"] }
platform-dirs = "0.3.0"
base64 = "0.13.0"
image = "0.24"


